@@ -1,6 +1,7 @@
 package com.hanrolink.infrastructure.cloudfront;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.GeneralSecurityException;
@@ -9,6 +10,7 @@ import java.security.PrivateKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.time.Duration;
 import java.time.Instant;
+import java.util.Base64;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
@@ -71,15 +73,29 @@ public class CloudFrontDownloadUrlGenerator {
     Path privateKeyPath
   ) {
     try {
-      byte[] privateKeyBytes = Files.readAllBytes(privateKeyPath);
+      String pem = Files.readString(
+        privateKeyPath,
+        StandardCharsets.US_ASCII
+      );
+
+      String encodedKey = pem
+        .replace("-----BEGIN PRIVATE KEY-----", "")
+        .replace("-----END PRIVATE KEY-----", "")
+        .replaceAll("\\s", "");
+
+      byte[] privateKeyBytes = Base64
+        .getDecoder()
+        .decode(encodedKey);
 
       PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(privateKeyBytes);
 
       return KeyFactory
         .getInstance("RSA")
         .generatePrivate(keySpec);
-    } catch(
-      IOException | GeneralSecurityException exception
+    } catch (
+      IOException
+        | GeneralSecurityException
+        | IllegalArgumentException exception
     ) {
       throw new IllegalStateException(
         "CloudFront署名用秘密鍵の読み込みに失敗しました",
